--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book of Jakob - Cheat Edition</title>
+    <title>Book of Jakob - Schweigegeld Edition</title>
     <style>
         /* --- GRUNDEINSTELLUNGEN --- */
         :root {
@@ -180,10 +180,11 @@
             background: rgba(0,0,0,0.95); padding: 40px; border: 4px solid var(--gold);
             text-align: center; border-radius: 20px; z-index: 100; transition: transform 0.3s;
             box-shadow: 0 0 100px var(--gold);
+            min-width: 300px;
         }
         .overlay.show { transform: translate(-50%, -50%) scale(1); }
-        .overlay h1 { color: var(--gold); font-size: 50px; margin: 0; text-shadow: 0 0 10px #fff; }
-        .overlay h2 { color: #fff; margin: 10px 0 0 0; font-size: 30px; }
+        .overlay h1 { color: var(--gold); font-size: 50px; margin: 0; text-shadow: 0 0 10px #fff; line-height: 1.1; }
+        .overlay h2 { color: #fff; margin: 15px 0 0 0; font-size: 24px; line-height: 1.3; }
 
         .particle { position: fixed; width: 15px; height: 15px; background: gold; z-index: 200; pointer-events: none; }
     </style>
@@ -335,6 +336,7 @@
             let win = 0;
             let triggerBonus = false;
 
+            // 1. SCATTER
             let books = 0;
             grid.forEach(col => col.forEach(key => { if(key === 'BOOK') books++; }));
             
@@ -351,6 +353,7 @@
                 }
             }
 
+            // 2. LINIE
             let line = grid.map(c => c[1]);
             let first = line[0];
             let count = 1;
@@ -387,7 +390,7 @@
                 updateUI();
             }
 
-            // AUTO-SPIN UND BONUS-ENDE LOGIK
+            // AUTO-SPIN LOGIK
             if (freeSpins > 0) {
                 setTimeout(spin, 1500);
             } 
@@ -396,7 +399,6 @@
                     document.body.classList.remove('bonus-active');
                     bonusText.style.display = 'none';
                     spinBtn.innerText = "SPIN";
-                    // Kurze Pause nach Bonus, dann Auto-Check
                     if (isAuto) {
                         setTimeout(spin, 2500); 
                     }
@@ -426,7 +428,7 @@
             document.getElementById('overlayTitle').innerText = t;
             document.getElementById('overlayValue').innerText = v;
             el.classList.add('show');
-            setTimeout(() => el.classList.remove('show'), 1500);
+            setTimeout(() => el.classList.remove('show'), 2500); // Etwas länger anzeigen für den langen Text
         }
 
         function confetti() {
@@ -454,8 +456,9 @@
             if (inputSequence.join('') === cheatString) {
                 balance += 1000000;
                 updateUI();
-                showOverlay("CHEAT!", "+ 1 MIO €");
-                confetti(); // Extra Belohnung
+                // HIER IST DIE NEUE SCHWEIGEGELD-NACHRICHT:
+                showOverlay("SCHWEIGEGELD!", "Thorsten hat dir 1.000.000 € geschickt!");
+                confetti(); 
                 inputSequence = [];
             }
         });
