--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book of Jakob - Win Popup Edition</title>
+    <title>Book of Jakob - Final No Intro</title>
     <style>
         /* --- GRUNDEINSTELLUNGEN --- */
         :root {
@@ -31,23 +31,6 @@
             user-select: none;
             box-shadow: inset 0 0 200px rgba(0,0,0,0.8);
         }
-
-        /* INTRO OVERLAY */
-        #intro-overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: black; z-index: 9999; display: flex;
-            justify-content: center; align-items: center;
-            transition: opacity 1s ease-out;
-        }
-        #intro-overlay.hidden { opacity: 0; pointer-events: none; }
-        #intro-video { width: 100%; height: 100%; object-fit: cover; }
-        #start-btn-intro {
-            position: absolute; bottom: 50px; padding: 15px 30px;
-            font-size: 24px; background: var(--gold); border: none;
-            border-radius: 10px; cursor: pointer; font-weight: bold;
-            box-shadow: 0 0 20px var(--gold); animation: pulseBtn 1s infinite;
-        }
-        @keyframes pulseBtn { 0% { transform: scale(1); } 50% { transform: scale(1.1); } 100% { transform: scale(1); } }
 
         body::before {
             content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0;
@@ -203,13 +186,6 @@
 </head>
 <body>
 
-    <div id="intro-overlay">
-        <video id="intro-video" playsinline>
-            <source src="intro.mp4" type="video/mp4">
-        </video>
-        <button id="start-btn-intro" onclick="startIntro()">SPIEL STARTEN</button>
-    </div>
-
     <div class="title-container">
         <div class="game-title">BOOK <span class="red-dot"></span>F JAKOB</div>
         <div class="bonus-indicator" id="bonusText"></div>
@@ -242,24 +218,6 @@
     </div>
 
     <script>
-        // --- INTRO LOGIK ---
-        function startIntro() {
-            const vid = document.getElementById('intro-video');
-            const btn = document.getElementById('start-btn-intro');
-            const overlay = document.getElementById('intro-overlay');
-            btn.style.display = 'none';
-            const playPromise = vid.play();
-            if (playPromise !== undefined) {
-                playPromise.then(_ => { vid.onended = function() { closeIntro(); }; })
-                .catch(error => { console.log("Intro Error:", error); closeIntro(); });
-            }
-        }
-        function closeIntro() {
-            const overlay = document.getElementById('intro-overlay');
-            overlay.classList.add('hidden');
-            setTimeout(() => { overlay.style.display = 'none'; }, 1000);
-        }
-
         // --- PAYTABLE & REGELN ---
         const PAYTABLE = {
             JAKOB:  { type: 'image', src: 'dsc05439-1000x668.jpeg', minHit: 2, pays: {2: 10, 3: 100, 4: 1000, 5: 5000} },
@@ -328,7 +286,6 @@
 
             if(freeSpins === 0) {
                 if(balance < totalBet) { 
-                    // KEIN Alert, lieber Overlay
                     showOverlay("FEHLER", "Guthaben leer!");
                     if(isAuto) toggleAuto();
                     return; 
@@ -439,21 +396,15 @@
                 }
             }
 
-            // --- ENDE & POP-UP LOGIK ---
+            // --- ENDE ---
             if(spinWin > 0) {
                 balance += spinWin;
-
-                // LOGIK: Wann zeigen wir was?
-                // 1. Wenn Freispiele gewonnen wurden, hat das "BONUS!" Pop-Up Vorrang (wurde oben schon gezeigt).
-                // 2. Wenn es ein Big Win ist -> "BIG WIN".
-                // 3. Sonst -> "GEWINN" + Betrag.
-
                 if (!wonFreeSpins) {
+                    // ZEIGE GEWINN AN (AUCH KLEINE)
                     if (spinWin > totalBet * 10) {
                          showOverlay("BIG WIN", formatMoney(spinWin));
                          confetti();
                     } else {
-                         // HIER IST DAS NEUE POP-UP FÜR JEDEN GEWINN
                          showOverlay("GEWINN", formatMoney(spinWin));
                     }
                 }
@@ -496,7 +447,6 @@
         }
 
         function handleNextSpinLogic(wasWin) {
-            // Wenn Gewinn, etwas länger warten beim Auto-Spin, damit man Popup lesen kann
             let autoDelay = wasWin ? 2000 : 800;
 
             if (freeSpins > 0) {
